runtime error fixed

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
     "    # move data to GPU, if available\n",
     "    if(train_on_gpu):\n",
     "        net.cuda()\n",
-    "        inputs, labels = inputs.cuda(), labels.cuda()\n",
+    "        \n",
     "        \n",
     "    rnn.train()\n",
     "    # detach hidden from graph\n",
@@ -621,13 +621,18 @@
     "    h = tuple([each.data for each in hidden])\n",
     "    \n",
     "    rnn.zero_grad()\n",
-    "    output, h = rnn(inputs, hidden)\n",
+    "    \n",
+    "    if(train_on_gpu):\n",
+    "        inputs, target = inputs.cuda(), labels.cuda()\n",
+    "    \n",
+    "    output, h = rnn(inputs, h)\n",
     "    \n",
     "    loss = criterion(output, labels)\n",
     "    \n",
     "    # perform backpropagation and optimization\n",
     "    loss.backward()\n",
-    "    nn.utils.clip_grad_norm_(rnn.parameters(), clip)\n",
+    "    #nn.utils.clip_grad_norm_(rnn.parameters(), clip)\n",
+    "    \n",
     "    optimizer.step()\n",
     "    # return the loss over a batch and the hidden state produced by our model\n",
     "    return loss.item(), h\n",
@@ -655,10 +660,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 71,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -721,17 +724,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 72,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Data params\n",
     "# Sequence Length\n",
-    "sequence_length =   # of words in a sequence\n",
+    "sequence_length = 20  # of words in a sequence\n",
     "# Batch Size\n",
-    "batch_size = \n",
+    "batch_size = 128\n",
     "\n",
     "# data loader - do not change\n",
     "train_loader = batch_data(int_text, sequence_length, batch_size)"
@@ -740,28 +741,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Training parameters\n",
     "# Number of Epochs\n",
-    "num_epochs = \n",
+    "num_epochs = 1\n",
     "# Learning Rate\n",
-    "learning_rate = \n",
+    "learning_rate = 0.001\n",
     "\n",
     "# Model parameters\n",
     "# Vocab size\n",
-    "vocab_size = \n",
+    "vocab_size = len(vocab_to_int)\n",
     "# Output size\n",
-    "output_size = \n",
+    "output_size = vocab_size\n",
     "# Embedding Dimension\n",
-    "embedding_dim = \n",
+    "embedding_dim = 500\n",
     "# Hidden Dimension\n",
-    "hidden_dim = \n",
+    "hidden_dim = 200\n",
     "# Number of RNN Layers\n",
-    "n_layers = \n",
+    "n_layers = 2\n",
     "\n",
     "# Show stats for every n number of batches\n",
     "show_every_n_batches = 500"
@@ -781,10 +780,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training for 1 epoch(s)...\n",
+      "Epoch:    1/1     Loss: 5.496021263122558\n",
+      "\n",
+      "Epoch:    1/1     Loss: 4.852710285663605\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
